--- a/index.html
+++ b/index.html
@@ -3,29 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto Final - Simulador de Tienda</title>
+    <title>CUBO 3D | Lámparas de Diseño</title>
+    <meta
+      name="description"
+      content="Simulador interactivo de compras de lámparas 3D impresas por CUBO 3D."
+    />
+
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- CSS personalizado -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <h1>CUBO 3D</h1>
-      <nav>
-        <button id="btnVerCarrito">
-          Ver Carrito (<span id="contadorCarrito">0</span>)
+    <header class="bg-dark text-white py-3">
+      <div class="container d-flex justify-content-between align-items-center">
+        <h1 class="logo">CUBO 3D</h1>
+        <button id="verCarrito" class="btn btn-outline-info">
+          🛒 Carrito (<span id="cantidadCarrito">0</span>)
         </button>
-      </nav>
+      </div>
     </header>
 
-    <main>
-      <section id="seccionProductos"></section>
-      <section id="seccionCarrito" class="oculto"></section>
+    <main class="container my-4">
+      <h2 class="text-center mb-4">Catálogo de Lámparas 3D</h2>
+      <div id="contenedorProductos" class="row g-4"></div>
+
+      <section id="carritoSection" class="mt-5">
+        <h3 class="text-center mb-3">Tu carrito</h3>
+        <div id="carrito" class="table-responsive"></div>
+        <div class="text-center mt-4">
+          <button id="vaciarCarrito" class="btn btn-danger">
+            Vaciar Carrito
+          </button>
+          <button id="finalizarCompra" class="btn btn-success">
+            Finalizar Compra
+          </button>
+        </div>
+      </section>
     </main>
 
-    <footer>
-      <p>© 2025 CUBO 3D - Proyecto Final de JavaScript</p>
+    <footer class="bg-dark text-white text-center py-3">
+      © 2025 CUBO 3D — Lámparas de diseño impresas en 3D
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
